--- a/q/10.html
+++ b/q/10.html
@@ -28,67 +28,67 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576587845466.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576587845466.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576587845466.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576606814069.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576606814069.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576606814069.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576609289037.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576609289037.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576609289037.webp" alt="Flower"/>
                         <b>S/N: A10-1</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576631710830.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576631710830.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576631710830.webp" alt="Flower"/>
                         <b>S/N: A10-2</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576633543829.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576633543829.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576633543829.webp" alt="Flower"/>
                         <b>S/N: A10-3</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576635103873.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576635103873.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576635103873.webp" alt="Flower"/>
                         <b>S/N: A10-4</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576645350825.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576645350825.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576645350825.webp" alt="Flower"/>
                         <b>S/N: A10-5</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576648212779.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576648212779.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576648212779.webp" alt="Flower"/>
                         <b>S/N: A10-6</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576652572016.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576652572016.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576652572016.webp" alt="Flower"/>
                         <b>S/N: A10-7</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576656575737.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576656575737.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576656575737.webp" alt="Flower"/>
                         <b>S/N: A10-8</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576659935990.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576659935990.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576659935990.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div> 
@@ -98,7 +98,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
