--- a/q/27.html
+++ b/q/27.html
@@ -28,31 +28,31 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720226343551632.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720226343551632.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720226343551632.webp" alt="Animal"/>
                         <b>Little Bear Cloth Patch</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720226343863372.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720226343863372.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720226343863372.webp" alt="Animal"/>
                         <b>Little Bear Cloth Patch</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720226343407543.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720226343407543.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720226343407543.webp" alt="Animal"/>
                         <b>Little Bear Cloth Patch</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720239540383451.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720239540383451.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720239540383451.webp" alt="Animal"/>
                         <b>Size in cm</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720239543276008.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720239543276008.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720239543276008.webp" alt="Animal"/>
                         <b>Size in cm</b>
                     </a>
                 </div> 
@@ -62,7 +62,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
