--- a/q/34.html
+++ b/q/34.html
@@ -28,73 +28,73 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944913432.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944913432.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944913432.webp" alt="Animal"/>
                         <b>Candy sticker</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944198665.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944198665.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944198665.webp" alt="Animal"/>
                         <b>Candy sticker</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944172906.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944172906.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944172906.webp" alt="Animal"/>
                         <b>Candy sticker</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944855786.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944855786.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944855786.webp" alt="Animal"/>
                         <b>lollipop</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944808655.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944808655.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944808655.webp" alt="Animal"/>
                         <b>popsicle</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944135251.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944135251.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944135251.webp" alt="Animal"/>
                         <b>candy</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944157423.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944157423.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944157423.webp" alt="Animal"/>
                         <b>ice cream</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944202224.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944202224.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944202224.webp" alt="Animal"/>
                         <b>croissant</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944531201.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944531201.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944531201.webp" alt="Animal"/>
                         <b>chocolate</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944963501.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944963501.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944963501.webp" alt="Animal"/>
                         <b>Strawberry Cake</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944765536.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944765536.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944765536.webp" alt="Animal"/>
                         <b>Cherry smoothie</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720322944611653.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944611653.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720322944611653.webp" alt="Animal"/>
                         <b>doughnut</b>
                     </a>
                 </div> 
@@ -104,7 +104,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
