--- a/q/37.html
+++ b/q/37.html
@@ -28,67 +28,67 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281677699.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281677699.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281677699.webp" alt="Animal"/>
                         <b>Cute little tiger</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281128069.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281128069.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281128069.webp" alt="Animal"/>
                         <b>S/N: A37</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281990026.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281990026.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281990026.webp" alt="Animal"/>
                         <b>S/N: A37-1</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281843646.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281843646.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281843646.webp" alt="Animal"/>
                         <b>S/N: A37-2</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281718311.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281718311.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281718311.webp" alt="Animal"/>
                         <b>S/N: A37-3</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281941981.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281941981.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281941981.webp" alt="Animal"/>
                         <b>S/N: A37-4</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281779217.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281779217.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281779217.webp" alt="Animal"/>
                         <b>S/N: A37-5</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281394444.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281394444.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281394444.webp" alt="Animal"/>
                         <b>S/N: A37-6</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281178361.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281178361.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281178361.webp" alt="Animal"/>
                         <b>S/N: A37-7</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281855742.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281855742.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281855742.webp" alt="Animal"/>
                         <b>S/N: A37-8</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720335281439605.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281439605.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720335281439605.webp" alt="Animal"/>
                         <b>S/N: A37-9</b>
                     </a>
                 </div> 
@@ -98,7 +98,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
