--- a/q/4.html
+++ b/q/4.html
@@ -28,97 +28,97 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719807328664852.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719807328664852.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719807328664852.webp" alt="Flower"/>
                         <b>Embroidered</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719818121414258.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719818121414258.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719818121414258.webp" alt="Flower"/>
                         <b>36cmX26cm</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719807328260114.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719807328260114.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719807328260114.webp" alt="Flower"/>
                         <b>S/N: A4-1</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719807328342949.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719807328342949.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719807328342949.webp" alt="Flower"/>
                         <b>S/N: A4-2</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817727687352.jpg">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817727687352.jpg" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817727687352.jpg" alt="Flower"/>
                         <b>S/N: A4-3</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817727642251.jpg">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817727642251.jpg" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817727642251.jpg" alt="Flower"/>
                         <b>S/N: A4-4</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817727359204.jpg">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817727359204.jpg" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817727359204.jpg" alt="Flower"/>
                         <b>S/N: A4-5</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817727687279.jpg">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817727687279.jpg" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817727687279.jpg" alt="Flower"/>
                         <b>S/N: A4-6</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817727627815.jpg">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817727627815.jpg" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817727627815.jpg" alt="Flower"/>
                         <b>S/N: A4-7</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817728955752.jpg">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728955752.jpg" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728955752.jpg" alt="Flower"/>
                         <b>S/N: A4-8</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817728573899.jpg">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728573899.jpg" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728573899.jpg" alt="Flower"/>
                         <b>S/N: A4-9</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817728383000.jpg">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728383000.jpg" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728383000.jpg" alt="Flower"/>
                         <b>S/N: A4-10</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817728644731.jpg">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728644731.jpg" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728644731.jpg" alt="Flower"/>
                         <b>S/N: A4-11</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817728343246.jpg">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728343246.jpg" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728343246.jpg" alt="Flower"/>
                         <b>S/N: A4-12</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817728591180.jpg">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728591180.jpg" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728591180.jpg" alt="Flower"/>
                         <b>S/N: A4-13</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719817728652548.jpg">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728652548.jpg" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719817728652548.jpg" alt="Flower"/>
                         <b>S/N: A4-14</b>
                     </a>
                 </div> 
@@ -128,7 +128,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
