--- a/q/46.html
+++ b/q/46.html
@@ -28,55 +28,55 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888860963.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888860963.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888860963.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888571014.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888571014.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888571014.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888104566.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888104566.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888104566.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888706187.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888706187.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888706187.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888187640.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888187640.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888187640.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888896170.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888896170.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888896170.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888163062.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888163062.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888163062.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888961252.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888961252.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888961252.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721101888889801.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888889801.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721101888889801.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div> 
@@ -86,7 +86,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
