--- a/q/63.html
+++ b/q/63.html
@@ -28,91 +28,91 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198850843830.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198850843830.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198850843830.webp" alt="Animal"/>
                         <b>S/N: A63</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858241612.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858241612.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858241612.webp" alt="Animal"/>
                         <b>S/N: A63-1</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858330911.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858330911.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858330911.webp" alt="Animal"/>
                         <b>S/N: A63-2</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858209438.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858209438.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858209438.webp" alt="Animal"/>
                         <b>S/N: A63-3</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858994610.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858994610.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858994610.webp" alt="Animal"/>
                         <b>S/N: A63-4</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858615729.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858615729.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858615729.webp" alt="Animal"/>
                         <b>S/N: A63-5</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858583005.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858583005.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858583005.webp" alt="Animal"/>
                         <b>S/N: A63-6</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858952679.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858952679.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858952679.webp" alt="Animal"/>
                         <b>S/N: A63-7</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858650130.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858650130.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858650130.webp" alt="Animal"/>
                         <b>S/N: A63-8</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858986535.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858986535.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858986535.webp" alt="Animal"/>
                         <b>S/N: A63-9</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858568514.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858568514.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858568514.webp" alt="Animal"/>
                         <b>S/N: A63-10</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858879726.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858879726.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858879726.webp" alt="Animal"/>
                         <b>S/N: A63-11</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858504517.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858504517.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858504517.webp" alt="Animal"/>
                         <b>S/N: A63-12</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198858751208.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858751208.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198858751208.webp" alt="Animal"/>
                         <b>S/N: A63-13</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721198862518183.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198862518183.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721198862518183.webp" alt="Animal"/>
                         <b>back</b>
                     </a>
                 </div> 
@@ -122,7 +122,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
