--- a/q/68.html
+++ b/q/68.html
@@ -28,151 +28,151 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267365990313.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365990313.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365990313.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267365981023.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365981023.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365981023.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267365801204.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365801204.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365801204.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267365846495.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365846495.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365846495.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267365105958.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365105958.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365105958.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267365325140.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365325140.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365325140.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267365418638.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365418638.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267365418638.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392570473.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392570473.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392570473.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392695082.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392695082.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392695082.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392666494.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392666494.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392666494.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392155508.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392155508.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392155508.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392468068.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392468068.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392468068.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392541207.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392541207.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392541207.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392600810.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392600810.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392600810.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392951930.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392951930.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392951930.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392444409.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392444409.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392444409.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392493701.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392493701.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392493701.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392511867.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392511867.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392511867.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392285604.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392285604.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392285604.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392638452.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392638452.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392638452.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392428916.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392428916.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392428916.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392637145.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392637145.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392637145.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392824553.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392824553.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392824553.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392339274.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392339274.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392339274.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721267392634175.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392634175.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721267392634175.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div> 
@@ -182,7 +182,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
