--- a/q/9.html
+++ b/q/9.html
@@ -28,121 +28,121 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576827388624.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576827388624.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576827388624.webp" alt="Flower"/>
                         <b>Embroidered</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576843113029.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576843113029.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576843113029.webp" alt="Flower"/>
                         <b>Embroidered</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576846447497.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576846447497.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576846447497.webp" alt="Flower"/>
                         <b>Embroidered</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856958959.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856958959.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856958959.webp" alt="Flower"/>
                         <b>S/N: A9-2</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856555027.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856555027.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856555027.webp" alt="Flower"/>
                         <b>S/N: A9-3</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856161288.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856161288.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856161288.webp" alt="Flower"/>
                         <b>S/N: A9-4</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856715162.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856715162.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856715162.webp" alt="Flower"/>
                         <b>S/N: A9-5</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856645983.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856645983.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856645983.webp" alt="Flower"/>
                         <b>S/N: A9-6</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856470802.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856470802.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856470802.webp" alt="Flower"/>
                         <b>S/N: A9-7</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856622626.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856622626.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856622626.webp" alt="Flower"/>
                         <b>S/N: A9-8</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856982591.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856982591.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856982591.webp" alt="Flower"/>
                         <b>S/N: A9-9</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856923161.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856923161.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856923161.webp" alt="Flower"/>
                         <b>S/N: A9-10</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856436102.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856436102.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856436102.webp" alt="Flower"/>
                         <b>S/N: A9-11</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856241313.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856241313.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856241313.webp" alt="Flower"/>
                         <b>S/N: A9-12</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856278538.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856278538.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856278538.webp" alt="Flower"/>
                         <b>S/N: A9-13</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856130688.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856130688.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856130688.webp" alt="Flower"/>
                         <b>S/N: A9-14</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856472497.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856472497.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856472497.webp" alt="Flower"/>
                         <b>S/N: A9-15</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856677915.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856677915.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856677915.webp" alt="Flower"/>
                         <b>S/N: A9-16</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856931127.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856931127.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856931127.webp" alt="Flower"/>
                         <b>S/N: A9-17</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576856944140.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856944140.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576856944140.webp" alt="Flower"/>
                         <b>S/N: A9-18</b>
                     </a>
                 </div> 
@@ -152,7 +152,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
