--- a/q/video/index.html
+++ b/q/video/index.html
@@ -34,7 +34,7 @@
 </main>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
