--- a/q/11.html
+++ b/q/11.html
@@ -28,19 +28,19 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719389747296309.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719389747296309.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719389747296309.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240630/1719759910175716.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240630/1719759910175716.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240630/1719759910175716.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240630/1719759913915347.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240630/1719759913915347.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240630/1719759913915347.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div> 
@@ -50,7 +50,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
