--- a/q/13.html
+++ b/q/13.html
@@ -28,31 +28,31 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390770601289.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390770601289.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390770601289.webp" alt="Flower"/>
                         <b>Embroidery flower bud lace flower applique</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390785541558.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390785541558.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390785541558.webp" alt="Flower"/>
                         <b>Embroidery flower bud lace flower applique</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390867604008.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390867604008.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390867604008.webp" alt="Flower"/>
                         <b>Embroidery flower bud lace flower applique</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390867142653.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390867142653.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390867142653.webp" alt="Flower"/>
                         <b>Embroidery flower bud lace flower applique</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390867968414.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390867968414.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390867968414.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div> 
@@ -62,7 +62,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
