--- a/q/14.html
+++ b/q/14.html
@@ -28,31 +28,31 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719805685113949.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719805685113949.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719805685113949.webp" alt="Flower"/>
                         <b>Qipao Hanfu collar cloud shoulder</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719805749310038.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719805749310038.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719805749310038.webp" alt="Flower"/>
                         <b>Qipao Hanfu collar cloud shoulder</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719805749284150.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719805749284150.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719805749284150.webp" alt="Flower"/>
                         <b>Qipao Hanfu collar cloud shoulder</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719805749667374.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719805749667374.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719805749667374.webp" alt="Flower"/>
                         <b>Qipao Hanfu collar cloud shoulder</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240701/1719805749337888.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719805749337888.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240701/1719805749337888.webp" alt="Flower"/>
                         <b>Qipao Hanfu collar cloud shoulder</b>
                     </a>
                 </div> 
@@ -62,7 +62,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
