--- a/q/15.html
+++ b/q/15.html
@@ -28,61 +28,61 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576419722657.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576419722657.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576419722657.webp" alt="Flower"/>
                         <b>Embroidered</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576438728427.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576438728427.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576438728427.webp" alt="Flower"/>
                         <b>S/N: A15-1</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576442207382.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576442207382.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576442207382.webp" alt="Flower"/>
                         <b>S/N: A15-2</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576444923678.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576444923678.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576444923678.webp" alt="Flower"/>
                         <b>S/N: A15-3</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576449511699.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576449511699.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576449511699.webp" alt="Flower"/>
                         <b>S/N: A15-4</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576451445348.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576451445348.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576451445348.webp" alt="Flower"/>
                         <b>S/N: A15-5</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576453759611.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576453759611.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576453759611.webp" alt="Flower"/>
                         <b>S/N: A15-6</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576456229242.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576456229242.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576456229242.webp" alt="Flower"/>
                         <b>S/N: A15-7</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576458303551.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576458303551.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576458303551.webp" alt="Flower"/>
                         <b>S/N: A15-8</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240628/1719576461501692.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576461501692.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240628/1719576461501692.webp" alt="Flower"/>
                         <b>S/N: A15-9</b>
                     </a>
                 </div> 
@@ -92,7 +92,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
