--- a/q/18.html
+++ b/q/18.html
@@ -28,13 +28,13 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719391194190860.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391194190860.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391194190860.webp" alt="Flower"/>
                         <b>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719391197157726.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391197157726.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391197157726.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div> 
@@ -44,7 +44,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
