--- a/q/2.html
+++ b/q/2.html
@@ -28,85 +28,85 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719821572670537.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719821572670537.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719821572670537.webp" alt="Flower"/>
                         <b>Embroidered lace three-dimensional fabric patch</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719821572678952.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719821572678952.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719821572678952.webp" alt="Flower"/>
                         <b>Embroidered lace three-dimensional fabric patch</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719821572589677.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719821572589677.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719821572589677.webp" alt="Flower"/>
                         <b>Embroidered lace three-dimensional fabric patch</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719821572352926.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719821572352926.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719821572352926.webp" alt="Flower"/>
                         <b>Embroidered lace three-dimensional fabric patch</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093171688.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093171688.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093171688.webp" alt="Flower"/>
                         <b>S/N: A2-1</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093465806.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093465806.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093465806.webp" alt="Flower"/>
                         <b>S/N: A2-2</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093988766.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093988766.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093988766.webp" alt="Flower"/>
                         <b>S/N: A2-3</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093410832.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093410832.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093410832.webp" alt="Flower"/>
                         <b>S/N: A2-4</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093336534.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093336534.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093336534.webp" alt="Flower"/>
                         <b>S/N: A2-5</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093481303.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093481303.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093481303.webp" alt="Flower"/>
                         <b>S/N: A2-6</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093615901.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093615901.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093615901.webp" alt="Flower"/>
                         <b>S/N: A2-7</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093632159.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093632159.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093632159.webp" alt="Flower"/>
                         <b>S/N: A2-8</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093391741.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093391741.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093391741.webp" alt="Flower"/>
                         <b>S/N: A2-9</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719822093375977.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093375977.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719822093375977.webp" alt="Flower"/>
                         <b>S/N: A2-10</b>
                     </a>
                 </div> 
@@ -116,7 +116,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
