--- a/q/20.html
+++ b/q/20.html
@@ -28,19 +28,19 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719391022657043.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391022657043.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391022657043.webp" alt="Animal"/>
                         <b>Your clothes can be so gorgeous</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719391026119535.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391026119535.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391026119535.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719391028653581.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391028653581.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719391028653581.webp" alt="Animal"/>
                         <b>Your clothes</b>
                     </a>
                 </div> 
@@ -50,7 +50,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
