--- a/q/21.html
+++ b/q/21.html
@@ -28,25 +28,25 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390626901068.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390626901068.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390626901068.webp" alt="Animal"/>
                         <b>Tiger head embroidery sticker</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390553546646.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390553546646.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390553546646.webp" alt="Animal"/>
                         <b>Tiger head embroidery sticker</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390553323341.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390553323341.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390553323341.webp" alt="Animal"/>
                         <b>Tiger head embroidery sticker</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390553865054.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390553865054.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390553865054.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div> 
@@ -56,7 +56,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
