--- a/q/22.html
+++ b/q/22.html
@@ -28,61 +28,61 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240626/1719390299785042.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390299785042.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240626/1719390299785042.webp" alt="Flower"/>
                         <b>Plum Water Soluble</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835379533190.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835379533190.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835379533190.webp" alt="Flower"/>
                         <b>S/N: A22-1</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835286604845.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835286604845.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835286604845.webp" alt="Flower"/>
                         <b>S/N: A22-2</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835286258353.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835286258353.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835286258353.webp" alt="Flower"/>
                         <b>S/N: A22-3</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835286161825.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835286161825.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835286161825.webp" alt="Flower"/>
                         <b>S/N: A22-4</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835286958424.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835286958424.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835286958424.webp" alt="Flower"/>
                         <b>S/N: A22-5</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835286322972.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835286322972.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835286322972.webp" alt="Flower"/>
                         <b>S/N: A22-6</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835364808371.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835364808371.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835364808371.webp" alt="Flower"/>
                         <b>S/N: A22-7</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835364279941.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835364279941.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835364279941.webp" alt="Flower"/>
                         <b>S/N: A22-8</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20201016/1602835364677527.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835364677527.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20201016/1602835364677527.webp" alt="Flower"/>
                         <b>S/N: A22-9</b>
                     </a>
                 </div> 
@@ -92,7 +92,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
