--- a/q/23.html
+++ b/q/23.html
@@ -28,37 +28,37 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719826872695139.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826872695139.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826872695139.webp" alt="Flower"/>
                         <b>S/N: A23</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719826879232022.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826879232022.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826879232022.webp" alt="Flower"/>
                         <b>S/N: A23-1</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719826991399903.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826991399903.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826991399903.webp" alt="Flower"/>
                         <b>S/N: A23-2</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719826886827244.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826886827244.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826886827244.webp" alt="Flower"/>
                         <b>S/N: A23-3</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719826879252999.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826879252999.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826879252999.webp" alt="Flower"/>
                         <b>S/N: A23-4</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719826886481832.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826886481832.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719826886481832.webp" alt="Flower"/>
                         <b>S/N: A23-5</b>
                     </a>
                 </div> 
@@ -68,7 +68,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
