--- a/q/24.html
+++ b/q/24.html
@@ -28,127 +28,127 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240701/1719827856399960.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719827856399960.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240701/1719827856399960.webp" alt="Flower"/>
                         <b>water-soluble flowers</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240702/1719913920881701.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240702/1719913920881701.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240702/1719913920881701.webp" alt="Flower"/>
                         <b>S/N: A25-A</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240702/1719913920752310.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240702/1719913920752310.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240702/1719913920752310.webp" alt="Flower"/>
                         <b>S/N:  A25-B</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174969582447.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174969582447.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174969582447.webp" alt="Flower"/>
                         <b>S/N:  A25-1</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174969268018.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174969268018.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174969268018.webp" alt="Flower"/>
                         <b>S/N:  A25-2</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174969654149.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174969654149.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174969654149.webp" alt="Flower"/>
                         <b>S/N:  A25-3</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174969423689.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174969423689.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174969423689.webp" alt="Flower"/>
                         <b>S/N:  A25-4</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174969182668.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174969182668.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174969182668.webp" alt="Flower"/>
                         <b>S/N: A25-5</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174970379261.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174970379261.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174970379261.webp" alt="Flower"/>
                         <b>S/N:  A25-6</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174970754244.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174970754244.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174970754244.webp" alt="Flower"/>
                         <b>S/N: A25-7</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174970155085.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174970155085.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174970155085.webp" alt="Flower"/>
                         <b>S/N:  A25-8</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174970359347.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174970359347.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174970359347.webp" alt="Flower"/>
                         <b>S/N:  A25-9</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174970149637.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174970149637.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174970149637.webp" alt="Flower"/>
                         <b>S/N:  A25-10</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720175045372000.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045372000.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045372000.webp" alt="Flower"/>
                         <b>S/N: A25-11</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720175045141654.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045141654.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045141654.webp" alt="Flower"/>
                         <b>S/N:  A25-12</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720175045743773.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045743773.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045743773.webp" alt="Flower"/>
                         <b>S/N:  A25-13</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720175045171076.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045171076.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045171076.webp" alt="Flower"/>
                         <b>S/N:  A25-14</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720175045562445.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045562445.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045562445.webp" alt="Flower"/>
                         <b>S/N:  A25-15</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720175045575816.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045575816.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045575816.webp" alt="Flower"/>
                         <b>S/N:  A25-16</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720175045872532.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045872532.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045872532.webp" alt="Flower"/>
                         <b>S/N:  A25-17</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720175045568884.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045568884.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720175045568884.webp" alt="Flower"/>
                         <b>S/N:  A25-18</b>
                     </a>
                 </div> 
@@ -158,7 +158,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
