--- a/q/25.html
+++ b/q/25.html
@@ -28,43 +28,43 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240705/1720173696904058.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173696904058.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173696904058.webp" alt="Animal"/>
                         <b>Puppy cloth patch</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240705/1720173696207767.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173696207767.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173696207767.webp" alt="Animal"/>
                         <b>Puppy cloth patch</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240705/1720173696640056.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173696640056.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173696640056.webp" alt="Animal"/>
                         <b>Puppy cloth patch</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240705/1720173696199481.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173696199481.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173696199481.webp" alt="Animal"/>
                         <b>Puppy cloth patch</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240705/1720173696771036.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173696771036.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240705/1720173696771036.webp" alt="Animal"/>
                         <b>Puppy cloth patch</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174019141747.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174019141747.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174019141747.webp" alt="Animal"/>
                         <b>Size in cm</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/image/20240705/1720174025907665.webp">
-                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174025907665.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/image/20240705/1720174025907665.webp" alt="Animal"/>
                         <b>Size in cm</b>
                     </a>
                 </div> 
@@ -74,7 +74,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
