--- a/q/28.html
+++ b/q/28.html
@@ -28,25 +28,25 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720230548555036.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720230548555036.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720230548555036.webp" alt="Animal"/>
                         <b>Cartoon Rabbit Astronaut</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720230548650206.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720230548650206.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720230548650206.webp" alt="Animal"/>
                         <b>Cartoon Rabbit Astronaut</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720230548350602.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720230548350602.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720230548350602.webp" alt="Animal"/>
                         <b>Cartoon Rabbit Astronaut</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720230548301668.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720230548301668.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720230548301668.webp" alt="Animal"/>
                         <b>Size in cm</b>
                     </a>
                 </div> 
@@ -56,7 +56,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
