--- a/q/29.html
+++ b/q/29.html
@@ -28,25 +28,25 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720248942347381.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720248942347381.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720248942347381.webp" alt="Animal"/>
                         <b>Cartoon Planet Astronaut</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720248942814721.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720248942814721.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720248942814721.webp" alt="Animal"/>
                         <b>Cartoon Planet Astronaut</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720248942863520.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720248942863520.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720248942863520.webp" alt="Animal"/>
                         <b>Cartoon Planet Astronaut</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720248942709677.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720248942709677.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720248942709677.webp" alt="Animal"/>
                         <b>Cartoon Planet Astronaut</b>
                     </a>
                 </div> 
@@ -56,7 +56,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
