--- a/q/30.html
+++ b/q/30.html
@@ -28,31 +28,31 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720249523715253.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720249523715253.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720249523715253.webp" alt="Animal"/>
                         <b>Cartoon Panda</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720249523509405.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720249523509405.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720249523509405.webp" alt="Animal"/>
                         <b>Cartoon Panda</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720249523525755.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720249523525755.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720249523525755.webp" alt="Animal"/>
                         <b>Cartoon Panda</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720249523976968.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720249523976968.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720249523976968.webp" alt="Animal"/>
                         <b>Cartoon Panda</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720249523695175.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720249523695175.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720249523695175.webp" alt="Animal"/>
                         <b>Cartoon Panda</b>
                     </a>
                 </div> 
@@ -62,7 +62,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
