--- a/q/31.html
+++ b/q/31.html
@@ -28,31 +28,31 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720250451226758.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720250451226758.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720250451226758.webp" alt="Animal"/>
                         <b>Cute cartoon cat</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720250451268689.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720250451268689.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720250451268689.webp" alt="Animal"/>
                         <b>Cute cartoon cat</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720250451359022.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720250451359022.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720250451359022.webp" alt="Animal"/>
                         <b>Cute cartoon cat</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720250451917034.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720250451917034.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720250451917034.webp" alt="Animal"/>
                         <b>Cute cartoon cat</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720250451204621.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720250451204621.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720250451204621.webp" alt="Animal"/>
                         <b>Cute cartoon cat</b>
                     </a>
                 </div> 
@@ -62,7 +62,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
