--- a/q/32.html
+++ b/q/32.html
@@ -28,91 +28,91 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720251573246784.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720251573246784.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720251573246784.webp" alt="Animal"/>
                         <b>Cartoon flower embroidery</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720251573430017.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720251573430017.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720251573430017.webp" alt="Animal"/>
                         <b>Cartoon flower embroidery</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098807291.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098807291.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098807291.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098595863.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098595863.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098595863.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098412226.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098412226.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098412226.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098260947.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098260947.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098260947.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098429713.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098429713.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098429713.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098810086.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098810086.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098810086.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098484024.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098484024.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098484024.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098920560.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098920560.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098920560.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098734262.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098734262.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098734262.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098312937.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098312937.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098312937.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098483678.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098483678.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098483678.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098650775.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098650775.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098650775.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720253098391941.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098391941.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720253098391941.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div> 
@@ -122,7 +122,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
