--- a/q/33.html
+++ b/q/33.html
@@ -28,79 +28,79 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258303241366.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258303241366.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258303241366.webp" alt="Animal"/>
                         <b>Cartoon animal embroidery</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258311558960.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258311558960.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258311558960.webp" alt="Animal"/>
                         <b>Cartoon animal embroidery</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258311589288.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258311589288.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258311589288.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258318678492.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258318678492.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258318678492.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258318412781.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258318412781.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258318412781.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258318646842.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258318646842.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258318646842.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258318567125.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258318567125.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258318567125.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258319951388.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319951388.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319951388.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258319579289.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319579289.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319579289.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258319543421.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319543421.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319543421.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258319785740.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319785740.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319785740.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258319368665.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319368665.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319368665.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/q/upload/other/20240706/1720258319778786.webp">
-                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319778786.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/q/upload/other/20240706/1720258319778786.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div> 
@@ -110,7 +110,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
