--- a/q/35.html
+++ b/q/35.html
@@ -28,73 +28,73 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895544840.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895544840.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895544840.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895510535.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895510535.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895510535.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895401536.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895401536.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895401536.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895621329.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895621329.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895621329.webp" alt="Animal"/>
                         <b>Kitty</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895702901.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895702901.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895702901.webp" alt="Animal"/>
                         <b>Kitty2</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895435739.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895435739.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895435739.webp" alt="Animal"/>
                         <b>dog</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895653973.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895653973.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895653973.webp" alt="Animal"/>
                         <b>dog2</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895737790.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895737790.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895737790.webp" alt="Animal"/>
                         <b>rabbit</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895360289.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895360289.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895360289.webp" alt="Animal"/>
                         <b>rabbit2</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895130756.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895130756.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895130756.webp" alt="Animal"/>
                         <b>Little Bear</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895269691.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895269691.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895269691.webp" alt="Animal"/>
                         <b>Little Bear2</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240707/1720323895678853.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895678853.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240707/1720323895678853.webp" alt="Animal"/>
                         <b>lamb</b>
                     </a>
                 </div> 
@@ -104,7 +104,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
