--- a/q/39.html
+++ b/q/39.html
@@ -28,79 +28,79 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240708/1720399327352439.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399327352439.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399327352439.webp" alt="Animal"/>
                         <b>S/N: A39</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240708/1720399336813183.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336813183.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336813183.webp" alt="Animal"/>
                         <b>S/N: A39-1</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240708/1720399336274075.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336274075.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336274075.webp" alt="Animal"/>
                         <b>S/N: A39-2</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240708/1720399336311744.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336311744.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336311744.webp" alt="Animal"/>
                         <b>S/N: A39-3</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240708/1720399336275785.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336275785.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336275785.webp" alt="Animal"/>
                         <b>S/N: A39-4</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240708/1720399336312714.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336312714.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336312714.webp" alt="Animal"/>
                         <b>S/N: A39-5</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240708/1720399336788372.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336788372.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336788372.webp" alt="Animal"/>
                         <b>S/N: A39-6</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240708/1720399336587888.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336587888.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336587888.webp" alt="Animal"/>
                         <b>S/N: A39-7</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240708/1720399336550496.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336550496.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336550496.webp" alt="Animal"/>
                         <b>S/N: A39-8</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240708/1720399336435762.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336435762.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336435762.webp" alt="Animal"/>
                         <b>S/N: A39-9</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240708/1720399336246209.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336246209.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336246209.webp" alt="Animal"/>
                         <b>S/N: A39-10</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240708/1720399336357173.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336357173.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336357173.webp" alt="Animal"/>
                         <b>S/N: A39-11</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240708/1720399336442007.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336442007.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240708/1720399336442007.webp" alt="Animal"/>
                         <b>S/N: A39-12</b>
                     </a>
                 </div> 
@@ -110,7 +110,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
