--- a/q/40.html
+++ b/q/40.html
@@ -28,127 +28,127 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029319917935.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029319917935.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029319917935.webp" alt="Animal"/>
                         <b>S/N: A40</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328437409.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328437409.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328437409.webp" alt="Animal"/>
                         <b>S/N: A40-1</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328454254.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328454254.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328454254.webp" alt="Animal"/>
                         <b>S/N: A40-2</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328429833.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328429833.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328429833.webp" alt="Animal"/>
                         <b>S/N: A40-3</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328247722.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328247722.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328247722.webp" alt="Animal"/>
                         <b>S/N: A40-4</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328233421.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328233421.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328233421.webp" alt="Animal"/>
                         <b>S/N: A40-5</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328527237.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328527237.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328527237.webp" alt="Animal"/>
                         <b>S/N: A40-6</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328797143.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328797143.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328797143.webp" alt="Animal"/>
                         <b>S/N: A40-7</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328990798.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328990798.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328990798.webp" alt="Animal"/>
                         <b>S/N: A40-8</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328282522.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328282522.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328282522.webp" alt="Animal"/>
                         <b>S/N: A40-9</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328328508.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328328508.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328328508.webp" alt="Animal"/>
                         <b>S/N: A40-10</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328986319.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328986319.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328986319.webp" alt="Animal"/>
                         <b>S/N: A40-11</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328706299.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328706299.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328706299.webp" alt="Animal"/>
                         <b>S/N: A40-12</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328238040.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328238040.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328238040.webp" alt="Animal"/>
                         <b>S/N: A40-13</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328616278.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328616278.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328616278.webp" alt="Animal"/>
                         <b>S/N: A40-14</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328837129.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328837129.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328837129.webp" alt="Animal"/>
                         <b>S/N: A40-15</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328480578.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328480578.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328480578.webp" alt="Animal"/>
                         <b>S/N: A40-16</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328122334.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328122334.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328122334.webp" alt="Animal"/>
                         <b>S/N: A40-17</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328730561.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328730561.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328730561.webp" alt="Animal"/>
                         <b>S/N: A40-18</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328563045.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328563045.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328563045.webp" alt="Animal"/>
                         <b>S/N: A40-19</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721029328664382.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328664382.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721029328664382.webp" alt="Animal"/>
                         <b>S/N: A40-20</b>
                     </a>
                 </div> 
@@ -158,7 +158,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
