--- a/q/41.html
+++ b/q/41.html
@@ -28,217 +28,217 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031037793560.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031037793560.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031037793560.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031041565831.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031041565831.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031041565831.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031051658361.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031051658361.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031051658361.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031051914257.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031051914257.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031051914257.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052543352.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052543352.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052543352.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052995412.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052995412.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052995412.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052588075.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052588075.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052588075.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052825603.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052825603.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052825603.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052966702.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052966702.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052966702.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052736464.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052736464.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052736464.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052109763.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052109763.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052109763.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052280489.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052280489.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052280489.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052503033.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052503033.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052503033.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052721532.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052721532.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052721532.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052822649.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052822649.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052822649.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052758351.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052758351.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052758351.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052836921.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052836921.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052836921.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052382396.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052382396.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052382396.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052494106.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052494106.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052494106.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052234034.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052234034.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052234034.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052770434.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052770434.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052770434.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052360197.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052360197.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052360197.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052780937.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052780937.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052780937.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052184928.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052184928.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052184928.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052139778.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052139778.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052139778.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052938034.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052938034.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052938034.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052199004.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052199004.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052199004.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052929717.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052929717.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052929717.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052565140.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052565140.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052565140.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052403967.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052403967.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052403967.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052531252.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052531252.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052531252.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052788343.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052788343.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052788343.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052480952.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052480952.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052480952.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052597751.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052597751.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052597751.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052854039.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052854039.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052854039.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721031052914938.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052914938.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721031052914938.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div> 
@@ -248,7 +248,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
