--- a/q/42.html
+++ b/q/42.html
@@ -28,97 +28,97 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035729608726.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035729608726.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035729608726.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752394881.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752394881.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752394881.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752424554.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752424554.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752424554.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752813734.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752813734.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752813734.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752472048.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752472048.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752472048.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752117497.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752117497.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752117497.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752603486.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752603486.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752603486.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752819261.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752819261.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752819261.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752304805.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752304805.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752304805.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752887778.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752887778.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752887778.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752579861.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752579861.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752579861.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752571512.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752571512.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752571512.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752835907.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752835907.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752835907.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752530049.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752530049.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752530049.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752912575.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752912575.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752912575.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240715/1721035752476947.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752476947.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240715/1721035752476947.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div> 
@@ -128,7 +128,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
