--- a/q/43.html
+++ b/q/43.html
@@ -28,61 +28,61 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091303662281.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091303662281.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091303662281.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309349657.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309349657.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309349657.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309387777.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309387777.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309387777.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309948974.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309948974.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309948974.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309677447.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309677447.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309677447.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309692990.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309692990.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309692990.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309195218.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309195218.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309195218.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309690006.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309690006.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309690006.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309926854.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309926854.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309926854.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721091309692302.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309692302.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721091309692302.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div> 
@@ -92,7 +92,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
