--- a/q/44.html
+++ b/q/44.html
@@ -28,103 +28,103 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092385769122.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092385769122.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092385769122.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392219256.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392219256.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392219256.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392547280.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392547280.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392547280.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392240873.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392240873.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392240873.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392863543.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392863543.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392863543.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392708327.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392708327.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392708327.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392104679.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392104679.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392104679.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392254042.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392254042.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392254042.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392286346.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392286346.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392286346.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392797738.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392797738.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392797738.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392281936.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392281936.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392281936.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392608082.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392608082.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392608082.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392540360.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392540360.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392540360.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392402751.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392402751.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392402751.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392568444.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392568444.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392568444.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392533888.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392533888.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392533888.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721092392411528.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392411528.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721092392411528.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div> 
@@ -134,7 +134,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
