--- a/q/48.html
+++ b/q/48.html
@@ -28,103 +28,103 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100161777517.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100161777517.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100161777517.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168310826.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168310826.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168310826.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168783729.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168783729.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168783729.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168284668.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168284668.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168284668.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168970169.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168970169.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168970169.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168319031.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168319031.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168319031.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168473589.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168473589.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168473589.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168945267.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168945267.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168945267.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168979130.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168979130.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168979130.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168909597.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168909597.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168909597.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168805377.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168805377.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168805377.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168974314.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168974314.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168974314.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168803534.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168803534.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168803534.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168700579.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168700579.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168700579.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168623250.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168623250.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168623250.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168529621.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168529621.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168529621.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721100168571408.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168571408.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721100168571408.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div> 
@@ -134,7 +134,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
