--- a/q/51.html
+++ b/q/51.html
@@ -28,103 +28,103 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114139578408.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114139578408.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114139578408.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114144693653.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144693653.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144693653.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114144467122.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144467122.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144467122.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114144285029.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144285029.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144285029.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114144228965.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144228965.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144228965.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114144112470.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144112470.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144112470.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114144834347.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144834347.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144834347.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114144329626.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144329626.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144329626.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114144791941.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144791941.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144791941.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114144294302.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144294302.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144294302.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114144948600.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144948600.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144948600.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114144701491.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144701491.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144701491.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114144259302.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144259302.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144259302.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114144111687.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144111687.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144111687.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114144920089.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144920089.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144920089.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114144339837.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144339837.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144339837.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721114144206052.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144206052.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721114144206052.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div> 
@@ -134,7 +134,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
