--- a/q/59.html
+++ b/q/59.html
@@ -28,151 +28,151 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121011841362.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121011841362.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121011841362.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018462905.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018462905.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018462905.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018641511.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018641511.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018641511.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018560727.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018560727.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018560727.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018511377.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018511377.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018511377.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018902048.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018902048.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018902048.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018941223.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018941223.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018941223.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018920516.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018920516.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018920516.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018796233.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018796233.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018796233.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018349206.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018349206.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018349206.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018454169.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018454169.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018454169.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018937839.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018937839.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018937839.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018559147.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018559147.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018559147.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018983925.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018983925.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018983925.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018358711.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018358711.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018358711.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018330502.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018330502.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018330502.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018852862.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018852862.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018852862.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018993709.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018993709.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018993709.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018992447.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018992447.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018992447.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018854266.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018854266.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018854266.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018855644.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018855644.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018855644.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018291534.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018291534.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018291534.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018987902.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018987902.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018987902.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018114684.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018114684.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018114684.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121018764769.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018764769.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121018764769.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div> 
@@ -182,7 +182,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
