--- a/q/60.html
+++ b/q/60.html
@@ -28,61 +28,61 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121733544994.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121733544994.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121733544994.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737822542.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737822542.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737822542.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737117669.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737117669.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737117669.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737848084.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737848084.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737848084.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737330989.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737330989.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737330989.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737297794.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737297794.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737297794.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737941263.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737941263.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737941263.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737372991.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737372991.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737372991.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737353713.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737353713.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737353713.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240716/1721121737686513.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737686513.webp" alt="Flower"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240716/1721121737686513.webp" alt="Flower"/>
                         <b></b>
                     </a>
                 </div> 
@@ -92,7 +92,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
