--- a/q/62.html
+++ b/q/62.html
@@ -28,229 +28,229 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187664239146.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187664239146.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187664239146.webp" alt="Animal"/>
                         <b>S/N: A62</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675536356.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675536356.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675536356.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675143677.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675143677.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675143677.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675195154.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675195154.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675195154.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675873889.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675873889.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675873889.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675537034.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675537034.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675537034.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675810601.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675810601.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675810601.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675488927.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675488927.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675488927.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675566705.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675566705.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675566705.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675303921.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675303921.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675303921.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675385544.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675385544.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675385544.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675882020.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675882020.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675882020.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675497942.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675497942.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675497942.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675920701.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675920701.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675920701.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675224725.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675224725.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675224725.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675678539.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675678539.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675678539.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675155803.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675155803.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675155803.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675477346.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675477346.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675477346.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675537312.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675537312.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675537312.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675272167.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675272167.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675272167.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675227540.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675227540.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675227540.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675866112.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675866112.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675866112.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675498009.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675498009.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675498009.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675150738.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675150738.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675150738.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675508025.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675508025.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675508025.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675816329.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675816329.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675816329.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675930843.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675930843.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675930843.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675312363.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675312363.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675312363.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675586841.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675586841.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675586841.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675473616.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675473616.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675473616.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675453530.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675453530.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675453530.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675266286.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675266286.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675266286.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675946776.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675946776.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675946776.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675668263.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675668263.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675668263.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675786444.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675786444.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675786444.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675266524.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675266524.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675266524.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675403269.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675403269.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675403269.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721187675291340.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675291340.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721187675291340.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div> 
@@ -260,7 +260,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
