--- a/q/64.html
+++ b/q/64.html
@@ -28,43 +28,43 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721200186216618.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200186216618.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200186216618.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721200189268075.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200189268075.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200189268075.webp" alt="Animal"/>
                         <b>S/N: A64</b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721200197342295.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200197342295.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200197342295.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721200197270573.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200197270573.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200197270573.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721200197769184.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200197769184.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200197769184.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721200197558421.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200197558421.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200197558421.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721200197990874.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200197990874.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721200197990874.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div> 
@@ -74,7 +74,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
