--- a/q/65.html
+++ b/q/65.html
@@ -28,73 +28,73 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201167907307.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201167907307.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201167907307.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173405582.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173405582.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173405582.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173513325.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173513325.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173513325.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173584185.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173584185.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173584185.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173453576.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173453576.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173453576.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173817615.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173817615.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173817615.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173843857.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173843857.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173843857.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173547486.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173547486.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173547486.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173623509.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173623509.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173623509.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173536598.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173536598.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173536598.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173497373.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173497373.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173497373.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721201173718938.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173718938.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721201173718938.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div> 
@@ -104,7 +104,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
