--- a/q/66.html
+++ b/q/66.html
@@ -28,151 +28,151 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203789985801.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203789985801.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203789985801.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203789718753.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203789718753.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203789718753.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203789894025.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203789894025.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203789894025.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203789322421.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203789322421.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203789322421.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203789891753.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203789891753.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203789891753.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803784935.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803784935.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803784935.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803115860.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803115860.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803115860.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803359005.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803359005.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803359005.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803364026.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803364026.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803364026.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803413267.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803413267.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803413267.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803142930.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803142930.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803142930.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803488132.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803488132.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803488132.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803612845.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803612845.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803612845.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803878266.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803878266.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803878266.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803423571.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803423571.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803423571.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803557550.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803557550.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803557550.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803901175.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803901175.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803901175.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803169755.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803169755.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803169755.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803604193.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803604193.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803604193.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803212541.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803212541.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803212541.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803439777.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803439777.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803439777.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803990762.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803990762.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803990762.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803416617.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803416617.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803416617.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803899214.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803899214.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803899214.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240717/1721203803632791.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803632791.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240717/1721203803632791.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div> 
@@ -182,7 +182,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
