--- a/q/69.html
+++ b/q/69.html
@@ -28,73 +28,73 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272523620786.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272523620786.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272523620786.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272523739168.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272523739168.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272523739168.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272523441288.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272523441288.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272523441288.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899453758.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899453758.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899453758.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899423559.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899423559.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899423559.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899676586.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899676586.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899676586.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899659037.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899659037.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899659037.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899130794.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899130794.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899130794.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899484947.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899484947.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899484947.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899491867.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899491867.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899491867.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899417818.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899417818.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899417818.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721272899954317.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899954317.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721272899954317.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div> 
@@ -104,7 +104,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
