--- a/q/70.html
+++ b/q/70.html
@@ -28,61 +28,61 @@
 			 <div class="row">
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274583932679.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274583932679.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274583932679.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274583111882.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274583111882.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274583111882.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274588278466.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588278466.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588278466.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274588960308.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588960308.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588960308.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274588221604.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588221604.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588221604.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274588541474.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588541474.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588541474.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274588579228.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588579228.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588579228.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274588206699.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588206699.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588206699.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274588404051.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588404051.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588404051.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div>
                 <div class="col c4">
                     <a class="btn btn-sm btn-a" href="https://c.zalalaa.com/u/upload/other/20240718/1721274588196175.webp">
-                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588196175.webp" alt="Animal"/></a>
+                        <img src="https://c.zalalaa.com/u/upload/other/20240718/1721274588196175.webp" alt="Animal"/>
                         <b></b>
                     </a>
                 </div> 
@@ -92,7 +92,7 @@
 		</div>
             <div class="row">
                <div class="col c1"> <img src="https://c.zalalaa.com/u/logo.webp" alt="Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin."/></div>
-			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn btn-sm btn-a" >Zalalaa.com</a></p></div>
+			   <div class="col c11"><p>Made in <a href="https://www.zalalaa.com/index.html" class="btn-sm btn-a" >Zalalaa.com</a></p></div>
             </div>
         </div>
     </body>
